# agent-zoo

./: .gitignore  main.py  pyproject.toml
agent_zoo/: README.md  __version__.py
agent_zoo/01_career_page_finder/: main.py
agent_zoo/career_page_finder/: get_career_page.py  get_domain.py  test_get_company_details.py
agent_zoo/get_job_listings/: get_career_page.py  get_company_url.py  get_job_listings.py  get_pagenation.py  test_crawlai.py  test_get_company_details.py
tests/: __init__.py
tests/career_page_finder/: __init__.py  test_get_domain.py
